--- a/02-template-syntax/practice/syntax.html
+++ b/02-template-syntax/practice/syntax.html
@@ -8,12 +8,12 @@
 
                 <!-- TODO: change the following "src" attribute to make it responsive to search term. -->
                 <!-- CAUTION: This part is tricky. Try to ask the *right* question and ask google for solution. -->
-                <img src="https://source.unsplash.com/300x300/?dog"></img>
+                <img :src="'https://source.unsplash.com/' + currentSize + '/?' + searchTerm"></img>
 
                 <div style="padding: 20px">
 
                     <!-- TODO: call randomSize() when click this button to change another pic with random size -->
-                    <button>change size</button>
+                    <button @click="randomSize()">change size</button>
 
                     <!-- Bind -->
                     <input style="display:inline-block" v-model="searchTerm" />
