--- a/02-template-syntax/practice/syntax.html
+++ b/02-template-syntax/practice/syntax.html
@@ -46,3 +46,15 @@
         </script>
     </body>
 </html>
+工位
+F15-C15192
+F15-15163
+F15-C15181
+15201
+F15-B15118
+F15-D15354已解决
+15354 D区，已解决
+F15A 15080
+F15-C 15223
+15层C区*
+15125 B区*
